--- a/src/Gui/fxml/ComputationTab.fxml
+++ b/src/Gui/fxml/ComputationTab.fxml
@@ -1,33 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
 <?import java.net.URL?>
 <HBox fx:id="computationInputPane" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="Gui.ComputationController">
-  <SplitPane dividerPositions="0.4977738201246661" focusTraversable="true" prefHeight="-1.0" prefWidth="1125.0" HBox.hgrow="ALWAYS">
+  <SplitPane dividerPositions="0.5440783615316117" focusTraversable="true" prefHeight="-1.0" prefWidth="1125.0" HBox.hgrow="ALWAYS">
     <items>
-      <GridPane fx:id="inputGridPane" gridLinesVisible="false">
-        <GridPane GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
+      <GridPane fx:id="inputGridPane" gridLinesVisible="false" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="221.0" prefWidth="590.0">
+        <GridPane prefHeight="-1.0" prefWidth="-1.0" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
           <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="118.0" minWidth="10.0" prefWidth="118.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="110.0" />
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="73.0" minWidth="10.0" prefWidth="73.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="80.0" />
           </columnConstraints>
-          <rowConstraints>
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          </rowConstraints>
           <Label contentDisplay="RIGHT" text="Window size" wrapText="true" GridPane.columnIndex="0" GridPane.halignment="RIGHT" GridPane.rowIndex="0">
             <tooltip>
               <Tooltip text="Defines the size of the windows in which the time series are shifted and cross correlated." />
             </tooltip>
           </Label>
           <TextField fx:id="windowSizeText" alignment="TOP_RIGHT" prefWidth="-1.0" text="200" GridPane.columnIndex="1" GridPane.rowIndex="0" />
-          <Label prefWidth="-1.0" text="window overlap" GridPane.columnIndex="0" GridPane.halignment="RIGHT" GridPane.rowIndex="1" />
+          <Label prefWidth="-1.0" text="Window overlap" GridPane.columnIndex="0" GridPane.halignment="RIGHT" GridPane.rowIndex="1" />
           <TextField fx:id="baseWindowOffsetText" alignment="TOP_RIGHT" minHeight="-1.0" prefHeight="-1.0" prefWidth="-1.0" text="130" visible="true" GridPane.columnIndex="1" GridPane.rowIndex="1" />
           <Label contentDisplay="RIGHT" text="Time lag min" visible="true" wrapText="true" GridPane.columnIndex="0" GridPane.halignment="RIGHT" GridPane.rowIndex="2">
             <tooltip>
@@ -41,20 +35,56 @@
             </tooltip>
           </Label>
           <TextField fx:id="timeLagMaxText" alignment="TOP_RIGHT" prefWidth="-1.0" text="100" visible="true" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-          <Label contentDisplay="RIGHT" text="p value" wrapText="true" GridPane.columnIndex="0" GridPane.halignment="RIGHT" GridPane.rowIndex="5">
-            <tooltip>
-              <Tooltip text="The level of significance when testing on significant correlation values (usually 0.05 = 5% or 0.01 = 1%)." />
-            </tooltip>
-          </Label>
-          <TextField id="significanceLevel" fx:id="significanceLevelText" alignment="TOP_RIGHT" prefWidth="-1.0" text="0.05" GridPane.columnIndex="1" GridPane.rowIndex="5" />
           <Label contentDisplay="RIGHT" text="Time lag step" visible="true" wrapText="true" GridPane.columnIndex="0" GridPane.halignment="RIGHT" GridPane.rowIndex="4">
             <tooltip>
               <Tooltip text="Defines the upper limit of the time lag range to compute in each window." />
             </tooltip>
           </Label>
           <TextField id="timeLagMaxText" fx:id="timeLagStepText" alignment="TOP_RIGHT" prefWidth="-1.0" text="1" visible="true" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+          <Label contentDisplay="RIGHT" text="p value" wrapText="true" GridPane.columnIndex="0" GridPane.halignment="RIGHT" GridPane.rowIndex="5">
+            <tooltip>
+              <Tooltip text="The level of significance when testing on significant correlation values (usually 0.05 = 5% or 0.01 = 1%)." />
+            </tooltip>
+          </Label>
+          <TextField id="significanceLevel" fx:id="significanceLevelText" alignment="TOP_RIGHT" prefWidth="-1.0" text="0.05" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+          <Label contentDisplay="RIGHT" text="data points" wrapText="true" GridPane.columnIndex="2" GridPane.rowIndex="0">
+            <tooltip>
+              <Tooltip text="Defines the size of the windows in which the time series are shifted and cross correlated." />
+            </tooltip>
+            <GridPane.margin>
+              <Insets left="5.0" fx:id="x1" />
+            </GridPane.margin>
+          </Label>
+          <rowConstraints>
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          </rowConstraints>
+          <Label contentDisplay="RIGHT" text="data points" wrapText="true" GridPane.columnIndex="2" GridPane.margin="$x1" GridPane.rowIndex="1">
+            <tooltip>
+              <Tooltip text="Defines the size of the windows in which the time series are shifted and cross correlated." />
+            </tooltip>
+          </Label>
+          <Label contentDisplay="RIGHT" text="data points" wrapText="true" GridPane.columnIndex="2" GridPane.margin="$x1" GridPane.rowIndex="2">
+            <tooltip>
+              <Tooltip text="Defines the size of the windows in which the time series are shifted and cross correlated." />
+            </tooltip>
+          </Label>
+          <Label contentDisplay="RIGHT" text="data points" wrapText="true" GridPane.columnIndex="2" GridPane.margin="$x1" GridPane.rowIndex="3">
+            <tooltip>
+              <Tooltip text="Defines the size of the windows in which the time series are shifted and cross correlated." />
+            </tooltip>
+          </Label>
+          <Label contentDisplay="RIGHT" text="data points" wrapText="true" GridPane.columnIndex="2" GridPane.margin="$x1" GridPane.rowIndex="4">
+            <tooltip>
+              <Tooltip text="Defines the size of the windows in which the time series are shifted and cross correlated." />
+            </tooltip>
+          </Label>
         </GridPane>
-        <Label fx:id="file1Label" contentDisplay="RIGHT" style="&#10;" text="Input File 1" textFill="#00cc21" textOverrun="LEADING_ELLIPSIS" wrapText="true" GridPane.columnIndex="0" GridPane.halignment="CENTER" GridPane.rowIndex="0">
+        <Label fx:id="file1Label" contentDisplay="RIGHT" style="&#10;" text="Ensemble 1" textFill="#00cc21" textOverrun="LEADING_ELLIPSIS" wrapText="true" GridPane.columnIndex="0" GridPane.halignment="CENTER" GridPane.rowIndex="0">
           <tooltip>
             <Tooltip text="Defines the size of the windows in which the time series are shifted and cross correlated." />
           </tooltip>
@@ -64,7 +94,7 @@
             <Font size="11.0" fx:id="x2" />
           </font>
         </Button>
-        <Label fx:id="file2Label" contentDisplay="RIGHT" text="Input File 2" textFill="#0066ff" textOverrun="LEADING_ELLIPSIS" wrapText="true" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="0">
+        <Label fx:id="file2Label" contentDisplay="RIGHT" text="Ensemble 2" textFill="#0066ff" textOverrun="LEADING_ELLIPSIS" wrapText="true" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="0">
           <tooltip>
             <Tooltip text="Defines the size of the windows in which the time series are shifted and cross correlated." />
           </tooltip>
@@ -99,9 +129,9 @@
           </tooltip>
         </Label>
         <columnConstraints>
-          <ColumnConstraints hgrow="ALWAYS" minWidth="150.0" />
-          <ColumnConstraints hgrow="ALWAYS" minWidth="150.0" />
-          <ColumnConstraints hgrow="NEVER" maxWidth="-1.0" minWidth="150.0" prefWidth="-1.0" />
+          <ColumnConstraints hgrow="ALWAYS" maxWidth="1.7976931348623157E308" minWidth="100.0" prefWidth="160.0" />
+          <ColumnConstraints hgrow="ALWAYS" maxWidth="1.7976931348623157E308" minWidth="100.0" prefWidth="160.0" />
+          <ColumnConstraints hgrow="NEVER" maxWidth="-1.0" minWidth="260.0" prefWidth="-1.0" />
         </columnConstraints>
         <rowConstraints>
           <RowConstraints maxHeight="16.0" prefHeight="16.0" vgrow="NEVER" />
